--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
+    "@researchgate/react-intersection-observer": "^0.7.4",
+    "interactjs": "^1.3.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-scroll": "^1.7.10",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
