--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "interactjs": "^1.3.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "2.1.3",
     "react-scroll": "^1.7.10",
+    "react-spring": "^7.2.10",
     "styled-components": "^4.1.3"
   },
   "scripts": {
@@ -26,5 +28,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.0"
+  }
 }
