--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-reveal": "^1.2.2",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "react-scroll": "^1.7.10",
     "react-spring": "^7.2.10",
     "styled-components": "^4.1.3"
