--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.0",
-    "@researchgate/react-intersection-observer": "^0.7.4",
     "interactjs": "^1.3.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-flexbox-grid": "^2.1.2",
+    "react-intersection-observer": "^8.10.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "^2.1.5",
     "react-scroll": "^1.7.10",
-    "react-spring": "^7.2.10",
+    "react-spring": "^8.0.7",
     "styled-components": "^4.1.3"
   },
   "scripts": {
