--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "https://anuraghazra.github.io",
   "dependencies": {
     "interactjs": "^1.3.4",
+    "intersection-observer": "^0.5.1",
     "react": "^16.7.0",
+    "react-app-polyfill": "^0.2.1",
     "react-dom": "^16.7.0",
     "react-flexbox-grid": "^2.1.2",
     "react-intersection-observer": "^8.10.0",
